# MITK-CudaProjectTemplate

./: README.md
CMake/: FunctionCreateCudaModule.cmake  MacroCreateCudaModuleTest.cmake
CMakeExternals/: ExternalProjectList.cmake  GTest.cmake
Modules/: ModuleList.cmake
Modules/CudaExample/: CMakeLists.txt
Modules/CudaExample/CudaImageFilters/: CMakeLists.txt
Modules/CudaExample/CudaImageFilters/include/: CudaImageFilters.h  CudaMinMaxScaler.h  CudaMinMaxScalerStub.h  DeviceUniquePtr.h  ICudaMinMaxScalerStub.h  MinMaxScaler.h
Modules/CudaExample/CudaImageFilters/mock_test/: CMakeLists.txt  MockCudaMinMaxScalerStub.h  TestDeviceUniquePtr_MUT.cpp
Modules/CudaExample/CudaImageFilters/src/: CudaImageFilters.cpp  CudaMinMaxScaler.cpp  CudaMinMaxScalerKernel.cu  MinMaxScaler.cpp
Modules/CudaExample/CudaImageFilters/test/: CMakeLists.txt  TestCudaMinMaxScaler.cpp  TestCudaMinMaxScalerFixture.h  TestDeviceUniquePtr.cpp
Modules/CudaExample/MockCudaRuntime/: CMakeLists.txt  cuda_runtime.cpp  cuda_runtime.h  mock_cuda_runtime.h  mock_device_types.h
Plugins/org.mitk.exampleplugin.eageractivation/: CMakeLists.txt
Plugins/org.mitk.exampleplugin.eageractivation/src/internal/: PluginActivator.cpp
Plugins/org.mitk.gui.qt.exampleplugin/: CMakeLists.txt
Plugins/org.mitk.gui.qt.exampleplugin/src/internal/: ExampleViewControls.ui  QmitkExampleView.cpp
